# Harmony_Forge

./: .gitignore  Cargo.toml  LICENSE  README.md  rules.md
.github/workflows/: tests.yml
src/: generators.rs  lib.rs  main.rs  midi_player.rs  models.rs  music_generator.rs  note.rs  player.rs  plays.rs  source_fadeout.rs  timers.rs
src/generators/: music_generator.rs  music_generator_as.rs  note_generator.rs  pattern_generator.rs  pattern_generators.rs  universal_generator.rs
src/models/: notes_playing.rs  time.rs  time_models.rs
src/music_generator/: chord_generators.rs  melody_generators.rs  midi_player.rs  note_generator.rs  pattern_generators.rs
src/note/: chords.rs  scales.rs  tone.rs
