[package]
name = "harmony_forge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
midir = "0.9.1"
midly = "0.5.3"
nodi = "0.19.2"
find_all = "2.0.0"
crossbeam-channel = "0.5.11"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
